hotfix: Cập nhật giao diện vật tư, nhóm vật tư, yêu cầu đặt hàng, thông báo, loại thông báo

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55133,3 +55133,7 @@ tr th {
     border: solid 1px #50cd89 !important;
     background-color: #f5f8fa !important;
 }
+
+.pointer {
+    cursor: pointer;
+}
