hotfix: cập nhật lại seeder và sửa lại giao diện thêm phiếu nhập

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55034,7 +55034,7 @@ body {
 .docs-aside-menu .menu .menu-item .menu-content,
 .docs-aside-menu .menu .menu-item .menu-link {
     padding-left: 25px;
-    padding-right: 25px
+    padding-right: 25px;
 }
 
 .docs-aside-menu .menu .menu-sub:not([data-popper-placement])>.menu-item>.menu-content,
