--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55197,9 +55197,31 @@ a {
 }
 
 .lowercase-text {
-    text-transform: lowercase !important; /* Chuyển đổi tất cả chữ cái thành chữ thường */
+    text-transform: lowercase !important;
+    /* Chuyển đổi tất cả chữ cái thành chữ thường */
 }
 
 .pagination nav div div p {
     margin: 0px !important;
+}
+
+.loading-spinner {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+    font-size: 3rem;
+    color: green;
+}
+
+.loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 9998;
+    display: none;
 }
