--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55131,9 +55131,11 @@ tr th {
 
 .select2-selection {
     border: solid 1px #50cd89 !important;
-    background-color: #f5f8fa !important;
+    background-color: #ffffff !important;
 }
-
+.select2-selection__rendered{
+    color: #000 !important;
+}
 .pointer {
     cursor: pointer;
 }
