--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55174,7 +55174,7 @@ h4,
 h5,
 h6,
 button {
-    text-transform: capitalize !important;
+    /* text-transform: capitalize !important; */
 }
 
 a {
