--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55209,84 +55209,59 @@ a {
     margin: 0px !important;
 }
 
-.ring {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 150px;
-    height: 150px;
-    background: transparent;
-    border: 3px solid #3c3c3c;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 150px;
-    font-family: sans-serif;
-    font-size: 13px;
-    color: #fff000;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    text-shadow: 0 0 10px #fff000;
-    box-shadow: 0 0 20px rgba(0, 0, 0, .5);
-    z-index: 9999;
+#loading {
     display: none;
 }
 
-.ring:before {
-    content: '';
-    position: absolute;
-    top: -2px;
-    left: -2px;
-    width: 103%;
-    height: 103%;
-    border: 4px solid transparent;
-    border-top: 4px solid #fff000;
-    border-right: 4px solid #fff000;
-    border-radius: 50%;
-    animation: animateC 2s linear infinite;
+.loader {
+    --hue: 210;
+    --size: 100px;
+    --border: 10px;
+    --speed: 1s;
+    --blur: var(--border);
 }
 
-#ring-loading {
-    display: block;
+.loader {
+    width: var(--border);
+    aspect-ratio: 1;
+    background: white;
+    border-radius: 50%;
+    position: fixed;
+    top: 50%;
+    right: 50%;
+    z-index: 9999;
+    --y: calc((var(--size) * -0.5) + (var(--border) * 0.5));
+    transform: rotate(0deg) translateY(var(--y));
+    animation: spin var(--speed) infinite linear;
+}
+
+.loader::before {
+    content: "";
     position: absolute;
-    top: calc(50% - 2px);
+    inset: calc(var(--border) * -0.5);
+    border-radius: 50%;
+    background: white;
+    filter: blur(var(--blur));
+    z-index: -1;
+}
+
+.loader::after {
+    content: "";
+    width: var(--size);
+    aspect-ratio: 1;
+    position: absolute;
+    top: 0%;
     left: 50%;
-    width: 50%;
-    height: 4px;
-    background: transparent;
-    transform-origin: left;
-    animation: animate 2s linear infinite;
-}
-
-#ring-loading:before {
-    content: '';
-    position: absolute;
-    width: 16px;
-    height: 16px;
+    translate: -50% 0;
+    background: conic-gradient(white, hsl(155.53deg 100% 50%), hsl(164.2deg 100% 50%), transparent 65%);
     border-radius: 50%;
-    background: #fff000;
-    top: -6px;
-    right: -8px;
-    box-shadow: 0 0 20px #fff000;
+    mask: radial-gradient(transparent calc(((var(--size) * 0.5) - var(--border)) - 1px),
+            white calc((var(--size) * 0.5) - var(--border)));
 }
 
-@keyframes animateC {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
-@keyframes animate {
-    0% {
-        transform: rotate(45deg);
-    }
-
-    100% {
-        transform: rotate(405deg);
+@keyframes spin {
+    to {
+        transform: rotate(-360deg) translateY(var(--y));
     }
 }
 
@@ -55300,8 +55275,6 @@ a {
     z-index: 9998;
     display: none;
 }
-
-
 
 #action_delete_all .dropdown-toggle {
     background: linear-gradient(45deg, #007bff, #00d4ff);
@@ -55451,4 +55424,8 @@ a {
 
 .menu-gray-800 .menu-item .menu-link:hover {
     color: green !important;
+}
+
+img {
+    object-fit: cover;
 }
